--- a/part3/Frontend/Phonebook/package.json
+++ b/part3/Frontend/Phonebook/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "bam": "npm run build && cp -r dist ../../Backend/phonebookBackend/",
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "json-server -p 3001 db.json"
